[gd_scene load_steps=2 format=3 uid="uid://drvhekv7e0jch"]

[ext_resource type="Script" path="res://scripts/Main.gd" id="1_0b8jm"]

[node name="Main" type="Node"]
script = ExtResource("1_0b8jm")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Background" type="ColorRect" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.15, 1)

[node name="Title" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 2
anchor_top = 0.0
anchor_bottom = 0.0
offset_left = 20.0
offset_top = 20.0
offset_right = 400.0
offset_bottom = 60.0
text = "Wight AI Agent Interface"
label_settings = SubResource("LabelSettings_1")

[node name="StatusPanel" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -300.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 60.0

[node name="StatusLabel" type="Label" parent="UI/StatusPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 5.0
offset_right = -10.0
offset_bottom = -5.0
text = "Initializing..."
horizontal_alignment = 1
vertical_alignment = 1

[node name="ChatPanel" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 80.0
offset_right = -20.0
offset_bottom = -120.0

[node name="ChatDisplay" type="RichTextLabel" parent="UI/ChatPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
bbcode_enabled = true
text = "[b][color=yellow]Wight AI Agent Interface[/color][/b]
[i]Connecting to AI backend...[/i]

"
scroll_following = true

[node name="InputPanel" type="Panel" parent="UI"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -100.0
offset_right = -20.0
offset_bottom = -20.0

[node name="MessageInput" type="LineEdit" parent="UI/InputPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -120.0
offset_bottom = -10.0
placeholder_text = "Type your message to Wight..."

[node name="SendButton" type="Button" parent="UI/InputPanel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -20.0
offset_right = -10.0
offset_bottom = 20.0
text = "Send"

[sub_resource type="LabelSettings" id="LabelSettings_1"]
font_size = 24
font_color = Color(0.8, 0.9, 1, 1)